--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@napi-rs/package-template",
+  "name": "@wgui/transformer",
   "version": "1.0.0",
-  "description": "Template project for writing node package with napi-rs",
+  "description": "A cross-platform UI component library. (Trial stage). The goal is to display desktop ui component and web ui component in a unified manner.",
   "main": "index.js",
-  "repository": "git@github.com:napi-rs/package-template.git",
   "license": "MIT",
   "keywords": [
     "napi-rs",
@@ -18,7 +17,7 @@
     "index.js"
   ],
   "napi": {
-    "name": "package-template",
+    "name": "wgui-transformer",
     "triples": {
       "defaults": true,
       "additional": [
@@ -37,10 +36,6 @@
   },
   "engines": {
     "node": ">= 10"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
   },
   "scripts": {
     "artifacts": "napi artifacts",
