--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,8 @@
 nodeLinker: node-modules
 
-npmAuditRegistry: "https://registry.npmjs.org"
+npmAuditRegistry: 'https://registry.npmjs.org'
 
 yarnPath: .yarn/releases/yarn-4.5.0.cjs
+
+httpProxy: 'http://localhost:7890'
+httpsProxy: 'http://localhost:7890'
