--- a/npm/darwin-x64/package.json
+++ b/npm/darwin-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@napi-rs/package-template-darwin-x64",
+  "name": "@wgui/transformer-darwin-x64",
   "version": "1.0.0",
   "os": [
     "darwin"
@@ -7,11 +7,11 @@
   "cpu": [
     "x64"
   ],
-  "main": "package-template.darwin-x64.node",
+  "main": "wgui-transformer.darwin-x64.node",
   "files": [
-    "package-template.darwin-x64.node"
+    "wgui-transformer.darwin-x64.node"
   ],
-  "description": "Template project for writing node package with napi-rs",
+  "description": "A cross-platform UI component library. (Trial stage). The goal is to display desktop ui component and web ui component in a unified manner.",
   "keywords": [
     "napi-rs",
     "NAPI",
@@ -23,10 +23,5 @@
   "license": "MIT",
   "engines": {
     "node": ">= 10"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": "git@github.com:napi-rs/package-template.git"
+  }
 }
