--- a/npm/linux-arm-gnueabihf/package.json
+++ b/npm/linux-arm-gnueabihf/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@napi-rs/package-template-linux-arm-gnueabihf",
+  "name": "@wgui/transformer-linux-arm-gnueabihf",
   "version": "1.0.0",
   "os": [
     "linux"
@@ -7,11 +7,11 @@
   "cpu": [
     "arm"
   ],
-  "main": "package-template.linux-arm-gnueabihf.node",
+  "main": "wgui-transformer.linux-arm-gnueabihf.node",
   "files": [
-    "package-template.linux-arm-gnueabihf.node"
+    "wgui-transformer.linux-arm-gnueabihf.node"
   ],
-  "description": "Template project for writing node package with napi-rs",
+  "description": "A cross-platform UI component library. (Trial stage). The goal is to display desktop ui component and web ui component in a unified manner.",
   "keywords": [
     "napi-rs",
     "NAPI",
@@ -23,10 +23,5 @@
   "license": "MIT",
   "engines": {
     "node": ">= 10"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": "git@github.com:napi-rs/package-template.git"
+  }
 }
