--- a/npm/linux-arm64-musl/package.json
+++ b/npm/linux-arm64-musl/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@napi-rs/package-template-linux-arm64-musl",
+  "name": "@wgui/transformer-linux-arm64-musl",
   "version": "1.0.0",
   "os": [
     "linux"
@@ -7,14 +7,11 @@
   "cpu": [
     "arm64"
   ],
-  "libc": [
-    "musl"
-  ],
-  "main": "package-template.linux-arm64-musl.node",
+  "main": "wgui-transformer.linux-arm64-musl.node",
   "files": [
-    "package-template.linux-arm64-musl.node"
+    "wgui-transformer.linux-arm64-musl.node"
   ],
-  "description": "Template project for writing node package with napi-rs",
+  "description": "A cross-platform UI component library. (Trial stage). The goal is to display desktop ui component and web ui component in a unified manner.",
   "keywords": [
     "napi-rs",
     "NAPI",
@@ -27,9 +24,7 @@
   "engines": {
     "node": ">= 10"
   },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": "git@github.com:napi-rs/package-template.git"
+  "libc": [
+    "musl"
+  ]
 }
